--- a/src/App.scss
+++ b/src/App.scss
@@ -70,8 +70,7 @@ body {
   float: right; 
 }
 footer { 
-  width: 100%; 
-  bottom: 0px; 
+  width: 100%;
   background-color: #000; 
   color: #fff; 
   position: absolute; 
@@ -83,4 +82,6 @@ footer {
 } 
 .body_sec { 
   margin-left:20px; 
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
