resolve show password UI

--- a/src/assets/styles/pages/_onboarding.scss
+++ b/src/assets/styles/pages/_onboarding.scss
@@ -143,6 +143,7 @@ position: relative;
 		font-size: $font-15;
 		font-weight: 600;
 		position: absolute;
+		z-index: 1;
 		right: 16px;
 		top: 55%;
 		cursor: pointer;
