manage request screen and popup design

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,12 +5,15 @@
  $white: #ffffff;
 $theme-color-light: #f0f9ff;
 $navy-blue: #272f56;
+$navy-blue1: #3a476d;
 $navy-blue-light: #7d84a8;
 $light-gray: #e4e4e4;
 $light-gray1: #80828c;
 $light-gray2: #e4dfdf;
 $light-purple: #57607f;
 $red: #f00;
+$red1: #ea6868;
+$green: #45b69f;
 $light-blue: #2499d6;
 $light-blue1: #74b5e5;
 $light-black: #080808;
