--- a/src/assets/styles/pages/_admin-header.scss
+++ b/src/assets/styles/pages/_admin-header.scss
@@ -85,6 +85,8 @@
     background: $white;
     padding: 0;
     min-width: 187px;
+    right: 20px!important;
+    left: inherit!important;
     
     &:before{
       content: '';
