--- a/src/assets/styles/pages/_admin-user-list.scss
+++ b/src/assets/styles/pages/_admin-user-list.scss
@@ -32,10 +32,11 @@
     padding: 0 15px;
     background: $white;
     border: 1px solid $light-gray2;
-    border-radius:4px;
     -moz-appearance: none;
     -webkit-appearance: none;
-     color: $light-gray1;
+    font-size: $font-15;
+     color: $light-gray1!important;
+     border-radius: 5px!important;
 
     &::placeholder{
       opacity: 1;
@@ -44,9 +45,22 @@
     }
   }
   .sort-user{
-    width: 150px;
+    position: relative;
+    select{
+      width: 180px;
     padding: 0 15px;
-    color: $light-gray1;
+    font-size: $font-15;
+    color: $light-gray1!important;
+    border-radius: 5px!important;
+    }
+
+    img{
+      position: absolute;
+      top: 50%;
+      right: 2px;
+      z-index: 1;
+      transform: translateX(-50%);
+    }
   }
 
   .search-user{
@@ -73,7 +87,7 @@ text-align: left;
 tbody{
   tr{
     background: $white;
-    border-radius: 12px;
+    border-radius: 20px;
   }
 }
   tr{
@@ -88,17 +102,19 @@ tbody{
     font-weight: 600;
     border: 0!important;
     padding: 20px 20px 40px 20px;
+    vertical-align: top!important;
   }
 
   td{
     border:0;
-    padding: 35px 20px;
+    padding: 18px 20px;
     color: $navy-blue;
     font-size: $font-15;
     font-family:$source-regular;
-    line-height: 18px;
     position: relative;
-    vertical-align: middle;
+    vertical-align: top;
+    line-height: 1.5;
+    white-space: nowrap;
 
     &:before{
       content: '';
@@ -117,10 +133,60 @@ tbody{
       height: 5px;
       background: #f0f9ff;
       left: 0;
-      top: 95%;
+      top: 96%;
+    }
+
+    &:first-child{
+      border-radius:20px 0 0 20px;
+    }
+
+    &:last-child{
+      border-radius:0 20px 20px 0;
     }
     
   }
+
+  .btn{
+
+    &.btn-danger{
+      background: transparent;
+      color: #ea6868;
+      text-transform: inherit;
+      font-size: 14px;
+      border: 1px solid #ea6868;
+      height: 40px;
+      line-height: 40px;
+      margin-right: 10px;
+  
+      &:focus{
+        background: transparent!important;
+        color: #ea6868!important;
+        box-shadow: none!important;
+      }
+    }
+
+    &.btn-primary{
+      background: transparent!important;
+      color: #3bc09c;
+      text-transform: inherit;
+      font-size: 14px;
+      border: 1px solid #3bc09c;
+      height: 40px;
+      line-height: 40px;
+      margin-right: 10px;
+  
+      &:focus{
+        background: transparent!important;
+        color: #3bc09c!important;
+        box-shadow: none!important;
+        border-color: #3bc09c!important;
+      }
+    }
+  }
+
+ 
+
+ 
 }
 
 
@@ -167,5 +233,112 @@ tbody{
 
 
 
+/*  Toggle Switch  */
 
 
+
+.toggleSwitch {
+  display: inline-block;
+  height: 40px;
+  position: relative;
+  overflow: visible;
+  padding: 0;
+  margin-left: 0;
+  cursor: pointer;
+  width: 100px
+}
+.toggleSwitch * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.toggleSwitch label,
+.toggleSwitch > span {
+  line-height: 20px;
+  height: 20px;
+  vertical-align: middle;
+}
+
+
+
+.toggleSwitch > span {
+  position: absolute;
+  left: -50px;
+  width: 100%;
+  margin: 0;
+  padding-right: 50px;
+  text-align: left;
+  white-space: nowrap;
+}
+.toggleSwitch > span span {
+  position: absolute;
+  top: 100%;
+  transform: translateY(-50%);
+  left: 15px;
+  z-index: 5;
+  display: block;
+  margin-left: 50px;
+  text-align: left;
+  font-size: 14px;
+  width: 100%;
+  opacity: 0;
+}
+.toggleSwitch a {
+  position: absolute;
+  left: calc(100% - 35px);
+  z-index: 4;
+  display: block;
+  height: 34px;
+  padding: 0;
+  top:3px;
+  width: 32px;
+  background-color: #fff;
+  border-radius: 5px;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+
+}
+.toggleSwitch > span span:first-of-type {
+  color: #fff;
+  opacity: 1;
+
+
+}
+.toggleSwitch > span:before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  left: 50px;
+  top: 0;
+  background-color: #3bc09c;
+  border-radius: 5px;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+.toggleSwitch input:checked ~ a {
+   border-color: #fff;
+   left: 4px;
+
+
+}
+.toggleSwitch input:checked ~ span:before {
+  box-shadow: inset 0 0 0 30px #ea6868;
+}
+.toggleSwitch input:checked ~ span span:first-of-type {
+  opacity: 0;
+
+}
+.toggleSwitch input:checked ~ span span:last-of-type {
+  opacity: 1;
+  color: #fff;
+      left:100%;
+      margin-left: 0
+    }
+
+
+
+    /*  End Toggle Switch  */
