--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -3,7 +3,8 @@
  */
 /**************************** TYPOGRAPHY *********************************/
 @import 'variables';
-@import 'pages/reusable.scss';
+@import 'pages/fonts';
+@import 'pages/reusable';
 @import 'pages/onboarding';
 @import 'pages/admin-header';
 @import 'pages/admin-user-list';
