onboarding screen design update

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -11,7 +11,7 @@ $light-gray: #e4e4e4;
 $light-gray1: #80828c;
 $light-gray2: #e4dfdf;
 $light-purple: #57607f;
-$red: #f00;
+$red: #d50000;
 $red1: #ea6868;
 $green: #45b69f;
 $light-blue: #2499d6;
