--- a/src/assets/styles/pages/_modal.scss
+++ b/src/assets/styles/pages/_modal.scss
@@ -9,7 +9,7 @@
     p{
       font-size:14px;
       color: rgba($color: $navy-blue, $alpha:0.7);
-      font-family: $font-regular;
+      font-family: $source-regular;
     }
   }
 
@@ -33,7 +33,7 @@
      display: block;
      color: $navy-blue1;
       font-family: $source-regular;
-      font-size:$font-14;
+      font-size:$font-16;
    }
   }
 
