--- a/src/assets/styles/pages/_onboarding.scss
+++ b/src/assets/styles/pages/_onboarding.scss
@@ -208,7 +208,7 @@ position: relative;
 	right: 20px;
 	top: 50%;
 	transform: translateY(-50%);
-	z-index: 1;
+	z-index: 9;
 	cursor: pointer;
  }
 
@@ -249,4 +249,7 @@ position: relative;
 	}
 }
 
+.ui-hide {
+	display: none;
+}
 
