home banner section design

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,10 +3,12 @@
  */
  
  $white: #ffffff;
+ $off-white: #fbfeff;
 $theme-color-light: #f0f9ff;
 $navy-blue: #272f56;
 $navy-blue1: #3a476d;
 $navy-blue-light: #7d84a8;
+$navy-blue-light1: #a1aac7;
 $light-gray: #e4e4e4;
 $light-gray1: #80828c;
 $light-gray2: #e4dfdf;
@@ -16,6 +18,7 @@ $red1: #ea6868;
 $green: #45b69f;
 $light-blue: #2499d6;
 $light-blue1: #74b5e5;
+$theme-blue: #489ccb;
 $light-black: #080808;
 $light-black1: #383838;
 
@@ -30,6 +33,7 @@ $light-black1: #383838;
  $font-16:   16px;
  $font-18:   18px;
  $font-20:   20px;
+ $font-21:   21px;
  $font-22:   22px;
  $font-24:   24px;
  $font-25:   25px;
@@ -44,6 +48,8 @@ $light-black1: #383838;
  $font-50:   50px;
  $font-53:   53px;
  $font-60:   60px;
+ $font-65:   65px;
+ $font-70:   70px;
  
  //FAMILIES
 
