--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -9,6 +9,7 @@
 @import 'pages/admin-header';
 @import 'pages/admin-user-list';
 @import 'pages/modal.scss';
+@import 'pages/landing-page';
 
 
 body{
