add table sorting icon

--- a/src/assets/styles/pages/_admin-user-list.scss
+++ b/src/assets/styles/pages/_admin-user-list.scss
@@ -103,6 +103,14 @@ tbody{
     border: 0!important;
     padding: 20px 20px 40px 20px;
     vertical-align: top!important;
+    white-space: nowrap;
+
+    span{
+      &.sorting{
+        margin-left: 10px;
+        cursor: pointer;
+      }
+    }
   }
 
   td{
