--- a/src/assets/styles/pages/_onboarding.scss
+++ b/src/assets/styles/pages/_onboarding.scss
@@ -220,7 +220,8 @@ position: relative;
 		position: absolute;
 		z-index: 1;
 		right: 16px;
-		top: 55%;
+		top: 50%;
+		transform: translateY(-50%);
 		cursor: pointer;
 	}
 }
