--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -19,7 +19,7 @@ $red1: #ea6868;
 $green: #45b69f;
 $light-blue: #2499d6;
 $light-blue1: #74b5e5;
-$light-blue2: #daf0ff;
+$light-blue2: #ebf7ff;
 $theme-blue: #489ccb;
 $light-black: #080808;
 $light-black1: #383838;
