manage request screen ui fixes

--- a/src/assets/styles/pages/_admin-user-list.scss
+++ b/src/assets/styles/pages/_admin-user-list.scss
@@ -105,6 +105,11 @@ tbody{
     vertical-align: top!important;
     white-space: nowrap;
 
+    &.width-200{
+      width:200px;
+      text-align: center;
+    }
+
     span{
       &.sorting{
         margin-left: 10px;
