--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -16,4 +16,10 @@
 
 body{
 	background:$theme-color-light;
+	-webkit-text-size-adjust: 100%;
+  font-variant-ligatures: none;
+  -webkit-font-variant-ligatures: none;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
