--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -11,8 +11,9 @@ $navy-blue2: #011f2e;
 $navy-blue-light: #7d84a8;
 $navy-blue-light1: #a1aac7;
 $light-gray: #e4e4e4;
-$light-gray1: #80828c;
+$light-gray1: #80828c; 
 $light-gray2: #e4dfdf;
+$light-gray3: #cdd1d6; 
 $light-purple: #57607f;
 $red: #d50000;
 $red1: #ea6868;
