--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,6 +4,7 @@
  
  $white: #ffffff;
  $off-white: #fbfeff;
+ $off-white2: #f6fafc;
 $theme-color-light: #f0f9ff;
 $navy-blue: #272f56;
 $navy-blue1: #3a476d;
