--- a/src/assets/styles/pages/_web-header.scss
+++ b/src/assets/styles/pages/_web-header.scss
@@ -32,7 +32,7 @@ padding: 10px 0;
       padding: 0;
       min-width: 187px;
       right: -35px!important;
-      left: inherit!important;
+      left: auto!important;
       margin-top: 15px;
       
       &:before{
