--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -15,7 +15,7 @@
 
 
 body{
-	background:$theme-color-light;
+	background: $off-white2;
 	-webkit-text-size-adjust: 100%;
   font-variant-ligatures: none;
   -webkit-font-variant-ligatures: none;
