--- a/src/assets/styles/pages/_admin-header.scss
+++ b/src/assets/styles/pages/_admin-header.scss
@@ -4,6 +4,7 @@
   align-items: center;
   background: $white;
   padding: 0 40px;
+  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.04);
 
   .main-menu{
     a{
@@ -17,17 +18,17 @@
       position: relative;
 
       &.active{
-        color: $light-blue;
+        color:$theme-blue;
         font-family:  $source-bold;
 
         &:before{
           content: '';
           position: absolute;
-          top: 100%;
+          top: calc(100% - 4px);
           left:0;
           width:100%;
           height:4px;
-          background: $light-blue;
+          background: $theme-blue;
         }
 
        
@@ -85,7 +86,7 @@
     padding: 0;
     min-width: 187px;
     right: 20px!important;
-    left: inherit!important;
+    left: auto!important;
     
     &:before{
       content: '';
