--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -25,6 +25,8 @@ $light-blue2: #e6f0f7;
 $theme-blue: #489ccb;
 $light-black: #080808;
 $light-black1: #383838;
+$watermar-blue: #E2F3FF;
+$watermar-white: #F0F9FF;
 
 
  //explore chart color
