--- a/src/assets/styles/pages/_admin-user-list.scss
+++ b/src/assets/styles/pages/_admin-user-list.scss
@@ -256,6 +256,7 @@ tbody{
           color: $white;
           border-color: $light-blue1;
           background-color: $light-blue1;
+          opacity: 1;
         }
       }
     }
