culture calendar header design

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,10 +5,12 @@
  $white: #ffffff;
  $off-white: #fbfeff;
  $off-white2: #f6fafc;
+ $off-white3: #f6fbff;
 $theme-color-light: #f0f9ff;
 $navy-blue: #272f56;
 $navy-blue1: #3a476d;
 $navy-blue2: #011f2e;
+$navy-blue3: #293157;
 $navy-blue-light: #7d84a8;
 $navy-blue-light1: #a1aac7;
 $light-gray: #e4e4e4;
@@ -22,7 +24,11 @@ $green: #45b69f;
 $light-blue: #2499d6;
 $light-blue1: #74b5e5;
 $light-blue2: #e6f0f7;
+$light-blue3: #c4e7ff;
+$light-blue4: #f6fbff;
 $theme-blue: #489ccb;
+$theme-blue1: #268ec2;
+$theme-blue2: #3f9bc8;
 $light-black: #080808;
 $light-black1: #383838;
 $watermar-blue: #E2F3FF;
