--- a/src/assets/styles/pages/_web-header.scss
+++ b/src/assets/styles/pages/_web-header.scss
@@ -4,11 +4,44 @@ top:0;
 z-index: 12;
 width: 100%;
 padding: 10px 0;
+@media (max-width:991px){
+  background: $white;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.05);
+}
+
+.container{
+  @media (max-width:1199px){
+  max-width:1050px;
+  }
+}
+
   .navbar{
     background: none!important;
 
+    .navbar-toggler{
+      border: 0;
+      &:focus{
+        outline: none;
+      }
+    }
+
+    .navbar-right{
+      @media (max-width:991px){
+        margin-top: 60px;
+      }
+    }
+
     .navbar-collapse{
       margin-left: 130px;
+      @media (max-width:991px){
+        padding-top:30px;
+        height:100vh;
+      }
+      @media (max-width:1199px){
+        margin-left: 10px;
+      }
+
+    
     }
 
     .navbar-nav{
@@ -18,8 +51,23 @@ padding: 10px 0;
           font-family:  $source-regular;
           color: $navy-blue;
           padding:9px 10px;
+        
+          @media (max-width:991px){
+            font-size:$font-21;
+            font-family:  $source-semibold;
+            display: inline-block;
+          }
+          &.m-dropdown {
+            @media (max-width:991px){
+              display: none; 
+            }
+           
+          }
+
 
         }
+
+       
       }
 
      
@@ -34,6 +82,12 @@ padding: 10px 0;
       right: -35px!important;
       left: auto!important;
       margin-top: 0;
+
+      @media (max-width:991px){
+        display: block;
+        box-shadow:none;
+        border:0;
+      }
       
       &:before{
         content: '';
@@ -46,6 +100,9 @@ padding: 10px 0;
         top: -5px;
         transform: rotate(-44deg);
         box-shadow: 2px -2px 1px rgb(232, 232, 232);
+        @media (max-width:991px){
+          display:none;
+        }
       }
       
       a{
@@ -57,7 +114,14 @@ padding: 10px 0;
         position: relative;
         display: block;
         padding: 20px!important;
-
+        @media (max-width:991px){
+          display: block!important;
+          text-align: center;
+          font-size: $font-21!important;
+          color:$navy-blue!important;
+          opacity: 1;
+          padding:10px!important;
+        }
         &:hover{
           text-decoration: none;
           background: none;
@@ -74,6 +138,10 @@ padding: 10px 0;
           width: 80%;
           height: 1px;
           background: rgba($color: $light-gray1, $alpha: 0.1);
+
+          @media (max-width:991px){
+            display: none;
+          }
         }
   
         &:last-child{
@@ -115,6 +183,10 @@ padding: 10px 0;
     padding: 9px 22px!important;
     margin-left: 15px;
     border-radius:5px;
+
+    @media (max-width:991px){
+      margin: 30px 0;
+    }
 
 
   }
