home page responsive design

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,6 +3,7 @@
  */
  
  $white: #ffffff;
+ $black: #000;
  $off-white: #fbfeff;
  $off-white2: #f6fafc;
  $off-white3: #f6fbff;
@@ -29,6 +30,7 @@ $light-blue4: #f6fbff;
 $theme-blue: #489ccb;
 $theme-blue1: #268ec2;
 $theme-blue2: #3f9bc8;
+$theme-blue3: #92c6e0;
 $light-black: #080808;
 $light-black1: #383838;
 $watermar-blue: #E2F3FF;
