--- a/src/assets/styles/pages/_landing-page.scss
+++ b/src/assets/styles/pages/_landing-page.scss
@@ -1,6 +1,9 @@
 .banner-section{
   background: $off-white;
   position: relative;
+  @media (min-width:576px) and (max-width:767px){
+    padding-bottom:40px;
+  }
   &:before{
     content: '';
     position: absolute;
@@ -19,8 +22,8 @@
     padding :261px 0 200px 0;
     position: relative;
     z-index: 1;
-    @media (max-width:767px){
-      padding: 160px 0 0 0;
+    @media (max-width:991px){
+      padding: 160px 0 80px 0;
     }
 
     h1{
@@ -29,7 +32,7 @@
       color: $theme-blue;
       position: relative;
       margin-bottom: 15px;
-      @media (max-width:767px){
+      @media (max-width:991px){
         font-size: $font-40;
       }
 
@@ -87,10 +90,17 @@
         font-family:  $source-regular;
         color: $navy-blue-light1;
         @media (max-width:767px){
-          width:231px;
           height: 41px;
           line-height: 41px;
         }
+
+        @media (min-width:576px) and (max-width:767px){
+          width: 260px;
+        }
+        @media (max-width:575px){
+          width:70%;
+        }
+
         &:focus{
           outline: 0;
         }
@@ -127,20 +137,33 @@
     right: 0;
     top:90px;
     max-width: 50%;
-    @media (max-width:767px){
+    @media (max-width:575px){
       position: relative;
       right: 0;
-      padding: 40px 0;
-      top: 0;
+      top: -30px;
       max-width:100%;
       text-align: right;
     }
+
+    @media (min-width:576px) and (max-width:767px){
+      max-width: 42%;
+      top: 120px;
+    }
+
+    @media (min-width:768px) and (max-width:1099px){
+      max-width:50%;
+      top: 120px;
+    }
+    
     
 
     img{
 
-      @media (max-width:767px){
-        max-width:345px;
+      @media (max-width:575px){
+        max-width:315px;
+      }
+      @media (min-width:576px) and (max-width:1099px){
+        max-width: 100%;
       }
       @media (min-width:1100px) and (max-width:1200px){
         max-width:570px;
@@ -198,7 +221,7 @@
 }
 .watermark-title-section {
   padding: 80px 0 30px 0;
-  @media (max-width:767px){
+  @media (max-width:575px){
     text-align: left;
     padding: 50px 0 20px 0;
 
@@ -209,7 +232,7 @@
     color: $navy-blue-light1;
     max-width: 900px;
     margin: auto;
-    @media (max-width:767px){
+    @media (max-width:575px){
       font-size: $font-15;
       line-height: 30px;
       max-width:315px;
@@ -245,6 +268,10 @@
     @media (max-width:767px){
       font-size:$font-28;
     }
+
+    @media (min-width:768px) and (max-width:991px){
+      font-size:$font-60;
+    }
   }
 
   h3{
@@ -261,6 +288,12 @@
 
     @media (max-width:767px){
       font-size:$font-21;
+      line-height: 21px;
+      top:50%;
+    }
+
+    @media (min-width:768px) and (max-width:991px){
+      font-size:$font-36;
       top:50%;
     }
 
@@ -275,9 +308,13 @@
       width:50px;
       height:5px;
       background:  $theme-blue;
-      @media (max-width:767px){
+      @media (max-width:575px){
         margin: initial;
         top: -30px;
+      }
+
+      @media (min-width:575px) and (max-width:1099px){
+        top:-100px
       }
     }
   }
@@ -307,7 +344,11 @@
 
     @media(max-width:767px){
       padding: 30px 20px;
+      margin: 50px auto;
+      max-width:400px;
     }
+
+  
     @media (min-width:992px) and (max-width:1199px){
       min-height: 332px;
     }
@@ -403,7 +444,12 @@ img{
   @media (max-width:767px){
     max-width:250px;
   }
+
+@media (min-width:768px) and (max-width:991px){
+  max-width:100%;
+  }
 }
+
   }
 
   .explore-detail{
@@ -533,11 +579,24 @@ img{
     .watermark-title{
       span{
         line-height: 0.8;
+        br{
+          @media (max-width:767px){
+            display: none;
+          }
+        }
       }
 
       h3{
         top: 40%;
         line-height: 1.5;
+        @media (max-width:767px){
+          line-height: 21px;
+        }
+        br{
+          @media (max-width:767px){
+            display: none;
+          }
+        }
 
         &::before{
           margin-left: 0;
@@ -548,17 +607,27 @@ img{
 
   .our-mission-content{
     text-align: left;
+    @media (max-width:767px){
+      padding:0 20px;
+    }
+    
     p{
       font-size: $font-19;
       font-family: $source-regular;
       color:$light-purple;
       line-height: 1.78;
+      @media (max-width:767px){
+        font-size: $font-16;
+      }
     
     }
   }
 
   .our-mission-img{
     padding: 80px 0;
+    @media (max-width:767px){
+      padding:20px 20px 40px 20px;
+    }
 
     img{
       max-width: 100%;
@@ -635,6 +704,7 @@ img{
       justify-content: flex-start;
       align-items: center;
       position: relative;
+      z-index: 12;
      
       em{
         width: 35px;
@@ -734,6 +804,9 @@ img{
 
 .how-it-work-section{
   background: $off-white;
+  @media (max-width:767px){
+    padding:0 20px;
+  }
 
   .watermark-title-section{
     p{
@@ -753,6 +826,7 @@ img{
   
   position: relative;
   padding-bottom:20px;
+ 
   &:after{
     content: '';
     position: absolute;
@@ -764,7 +838,12 @@ img{
     bottom: 0;
     right: 0;
     margin: auto;
+    @media (max-width:767px){
+      display: none;
+    }
   }
+
+ 
 }
 
 
@@ -773,15 +852,33 @@ display: flex;
 align-items: center;
 justify-content: center;
 margin:50px 0;
+@media (max-width:767px){
+  flex-wrap: wrap;
+  align-items: flex-start;
+  margin-bottom: 0;
+}
   .img-block{
     width:40%;
+    @media (max-width:767px){
+      width:100%;
+      order:3;
+      text-align: center;
+    }
 
     img{
       max-width:100%;
+      @media (max-width:767px){
+        display: inherit;
+        margin: 20px auto 0 auto;
+      }
     }
   }
   .graph-no{
     width:20%;
+    @media (max-width:767px){
+      text-align: left;
+      margin-right:20px;
+    }
    
     span{
       width:80px;
@@ -794,22 +891,50 @@ margin:50px 0;
       border-radius: 26px;
       position: relative;
       z-index: 1;
+      @media (max-width:767px){
+        width:50px;
+        height:50px;
+        border-radius:19px;
+      }
       small{
         font-family:  $source-bold;
         color:$light-blue;
         font-size: $font-34;
+        @media (max-width:767px){
+          font-size: $font-24;
+        }
       }
     }
   }
   .content-block{
     width:40%;
+    @media (max-width:767px){
+      width:calc(80% - 20px);
+    }
 
     p{
       font-family:  $source-semibold;
       color: $light-purple;
       font-size: $font-21;
+      @media (max-width:767px){
+        font-size: $font-16;
+      }
    
+      br{
+        @media (max-width:767px){
+          display: none;
+        }
+      }
     }
+  }
+  &.row-even{
+    @media (max-width:767px){
+      .content-block{
+        order:2;
+        text-align: left!important;
+      }
+    }
+ 
   }
 }
 
@@ -825,6 +950,9 @@ margin:50px 0;
 
   background: $white;
   padding-bottom:75px;
+  @media (max-width:767px){
+    padding: 0 20px;
+  }
 
   .client-wrap{
     display: flex;
@@ -842,6 +970,17 @@ margin:50px 0;
   align-items: center;
   justify-content: center;
   margin-bottom:30px;
+
+  @media (max-width:991px){
+    margin-bottom: 10px;
+    width:calc(50% - 10px);
+    height:144px;
+    padding: 20px;
+  }
+
+  img{
+    max-width:100%;
+  }
     }
   }
 
